--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-body {
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-}
-
 :root {
     --main-color: #212121;
     --secondary-color: #757575;
@@ -11,6 +6,35 @@ body {
     --background-color: #2F303A;
     --background-secondary-color: #FFFFFF;
 }
+
+body {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+h1,h2,h3,h4,h5,h6,p {
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    padding: 0;
+    border: none;
+}
+
+.container {
+    max-width: 1170px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* logo */
 
 .logo {
     font-family: 'Raleway';
@@ -50,10 +74,30 @@ body {
 
 .header {
     background-color: var(--background-secondary-color);
+    display: flex;
+    align-items: center;
+    padding: 25px 0;
+}
+
+.header-nav {
+    display: flex;
+}
+
+.header-nav-logo {
+    margin-right: 93px;
+}
+
+.header-list {
+    display: flex;
+    align-self: center;
 }
 
 .header-list-item {
     list-style-type: none;
+    margin-right: 50px;
+}
+.header-list-item:last-child {
+    margin-right: 0;
 }
 
 .header-list-item-link {
@@ -64,8 +108,16 @@ body {
     color: var(--hover-color);
 }
 
+.header-link-wrap {
+    margin-left: auto;
+}
+
 .header-link {
     color: var(--secondary-color);
+}
+
+.header-link:not(:last-child) {
+    margin-right: 50px;
 }
 
 .header-link:hover {
@@ -100,15 +152,26 @@ body {
     color: var(--secondary-text-color);
 }
 
-/* index.html  */
+/* main  */
 
 /* section hero */
 
-.hero {
+.hero-wrap {
     background-color: var(--background-color);
+    margin-bottom: 94px;
+}
+
+.hero {
+    padding: 200px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hero-title {
+    max-width: 696px;
+    margin-bottom: 30px;
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -119,6 +182,9 @@ body {
 }
 
 .hero-btn {
+    width: 200px;
+    padding: 10px 0;
+
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     background-color: var(--hover-color);
@@ -128,6 +194,8 @@ body {
     line-height: 1.88;
     text-align: center;
     letter-spacing: 0.06em;
+
+    border-radius: 5px;
 }
 
 .hero-btn:hover {
@@ -136,7 +204,17 @@ body {
 
 /* section advantage */
 
+.advantage {
+    padding-bottom: 94px;
+}
+
+.advantage-list {
+    display: flex;
+}
+
 .advantage-list-item {
+    max-width: 270px;
+
     list-style-type: none;
 }
 
