--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ ul {
     padding: 0;
 }
 
-h1,h2,h3,h4,h5,h6,p {
+h1,h2,h3,h4,h5,h6,p,a {
     margin: 0;
     padding: 0;
 }
@@ -28,7 +28,7 @@ button {
 }
 
 .container {
-    max-width: 1170px;
+    max-width: 1200px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
@@ -73,10 +73,12 @@ button {
 /* header */
 
 .header {
-    background-color: var(--background-secondary-color);
+    padding: 25px 0;
+}
+
+.header .container {
     display: flex;
     align-items: center;
-    padding: 25px 0;
 }
 
 .header-nav {
@@ -130,13 +132,33 @@ button {
     background-color: var(--background-color);
 }
 
+.footer .container {
+    padding: 60px 0;
+}
+
 .footer-link-logo span {
     color: var(--secondary-text-color);
 }
 
+.footer address {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.footer-link-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
 .footer-link-address {
+    margin-bottom: 10px;
+
     color: rgba(255, 255, 255, 0.6);
     font-weight: 400;
+}
+
+.footer-link-address:last-child {
+    margin-bottom: 0;
 }
 
 .footer-link-address:hover {
@@ -156,12 +178,12 @@ button {
 
 /* section hero */
 
-.hero-wrap {
+.hero {
     background-color: var(--background-color);
     margin-bottom: 94px;
 }
 
-.hero {
+.hero .container {
     padding: 200px 0;
     display: flex;
     flex-direction: column;
@@ -205,7 +227,7 @@ button {
 /* section advantage */
 
 .advantage {
-    padding-bottom: 94px;
+    margin-bottom: 94px;
 }
 
 .advantage-list {
@@ -214,11 +236,18 @@ button {
 
 .advantage-list-item {
     max-width: 270px;
+    margin-right: 30px;
 
     list-style-type: none;
 }
 
+.advantage-list-item:last-child {
+    margin-right: 0;
+}
+
 .advantage-list-item-title {
+    margin-bottom: 10px;
+
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -237,17 +266,64 @@ button {
 
 /* section whatwedo */
 
+.whatwedo {
+    margin-bottom: 188px;
+}
+
+.whatwedo-title {
+    margin-bottom: 50px;
+}
+
+.whatwedo-list {
+    display: flex;
+}
+
 .whatwedo-list-item {
     list-style-type: none;
+    margin-right: 30px;
+}
+
+.whatwedo-list-item:last-child {
+    margin-right: 0;
 }
 
 /* team */
 
+.team {
+    margin-bottom: 94px;
+}
+
+.team-title {
+    margin-bottom: 50px;
+}
+
+.team-list {
+    display: flex;
+}
+
 .team-list-item {
     list-style-type: none;
+    margin-right: 30px;
+    padding-bottom: 30px;
+
+    background-color: var(--background-secondary-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-list-item:last-child {
+    margin-right: 0;
+}
+
+.team-list-item-img {
+    margin-bottom: 30px;
 }
 
 .team-list-item-title {
+    margin-bottom: 10px;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -267,8 +343,28 @@ button {
 
 /* portfolio.html  */
 
+.portfolio-cards {
+    margin: 94px 0;
+}
+
+.portfolio-cards .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.portfolio-btn-list {
+    display: flex;
+    margin-bottom: 34px;
+}
+
 .portfolio-list-item {
     list-style-type: none;
+    margin-right: 30px;
+}
+
+.portfolio-list-item:last-child {
+    margin-right: 0;
 }
 
 .portfolio-btn {
@@ -292,11 +388,29 @@ button {
 
 /* section portfolio-cards  */
 
+.portfolio-cards-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin-left: -30px;
+    margin-bottom: -30px;
+}
+
 .cards-list-item {
     list-style-type: none;
+    
+    margin-left: 30px;
+    margin-bottom: 30px;
+    flex-basis: calc(100% / 3 - 30px);
+}
+
+.cards-list-item-img {
+    margin-bottom: 20px;
 }
 
 .cards-list-item-title {
+    margin-bottom: 4px;
+
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
